--- a/Novy_textovy_dokument.html
+++ b/Novy_textovy_dokument.html
@@ -34,5 +34,8 @@
 	<li>Tea</li>
 	<li>Milk</li>
 </ul>
+<h2 class='task5'>Задание5</h2>
+<img class='img1' src="https://pp.userapi.com/c852228/v852228023/279c9/y_IboYNdTUI.jpg" style="width:300px;height:300px;" alt="IT ME???"/>
+<img class='img2' src="DOTA 2.jpg" alt="Doka2xD" style="width:300px;height:300px;" />
 </body>
 </html>
