--- a/Novy_textovy_dokument.html
+++ b/Novy_textovy_dokument.html
@@ -37,5 +37,45 @@
 <h2 class='task5'>Задание5</h2>
 <img class='img1' src="https://pp.userapi.com/c852228/v852228023/279c9/y_IboYNdTUI.jpg" style="width:300px;height:300px;" alt="IT ME???"/>
 <img class='img2' src="DOTA 2.jpg" alt="Doka2xD" style="width:300px;height:300px;" />
+
+<h2 >Задание6</h2>
+<table style="width:100%">
+    <caption style="font-size: 40px; color:blueviolet">Doka2-kishki 10 minyt</caption>
+    <tr>
+      <th style="width:20%">Heroes</th>
+      <th style="width:25%">Winrate</th> 
+      <th style="width:15%">Task</th>
+      <th style="width:28%">ItemBild</th>
+      <th style="width:12%">ConterPick</th> 
+    </tr>
+    <tr>
+      <td class="t1">Bloodsiker</td>
+      <td class="t2">57%</td> 
+      <td class="t3">Snowball earlygame</td>
+      <td class="t4">Phaseboots,Eul,BM</td> 
+      <td class="t5">none</td>
+    </tr>
+    <tr>
+        <td class="t1">Zeus</td>
+        <td class="t2">54.3%</td> 
+        <td class="t3">Force Aghanim scepter</td>
+        <td class="t4">Archan Boot</td> 
+        <td class="t5">Anti-Mage</td>
+    </tr>
+    <tr>
+        <td class="t1">Riki</td>
+        <td class="t2">61%</td> 
+        <td class="t3">pls die </td>
+        <td class="t4">again its retard heroe</td> 
+        <td class="t5">Centry Ward</td>
+    </tr>
+    <tr>
+        <td class="t1">Phantom Assasin</td>
+        <td class="t2">54%</td> 
+        <td class="t3">Fast BF or Desolator</td>
+        <td class="t4">BF,Manta,BKB</td> 
+        <td class="t5">AXE</td>
+    </tr>
+  </table>
 </body>
 </html>
